--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-python.python",
-				"ms-python.vscode-pylance"
+				"ms-python.vscode-pylance",
+				"ms-vscode.makefile-tools"
 			]
 		}
 	},
@@ -45,5 +46,7 @@
 	"remoteUser": "vscode",
 	"features": {
 		"azure-cli": "latest"
+	}
+}
 	}
 }
